Fixed infinite recursions caused by mappings